Add sections to Yunify Glyph

--- a/yunify-glyph/index.html
+++ b/yunify-glyph/index.html
@@ -538,6 +538,22 @@
         <img class="grey-icon" src="/yunify-glyph/image/grey-icon.png" alt="Grey icon">
         <img class="green-icon" src="/yunify-glyph/image/green-icon.png" alt="Green icon">
         <img class="white-icon" src="/yunify-glyph/image/white-icon.png" alt="White icon">
+        <div class="process-title-4">
+            <h5 class="subtitle">Sizes</h5>
+            <h4 class="process-title-text">The power of vector.</h4>
+        </div>
+        <div class="body-text fp-5">
+            <p>Icons designed for software have always followed the approach of designing icons differently at each size. In my opinion a very important reason for doing this is that in the past the icons were drawn using bitmaps. Therefore, with the popularity of vector technologies such as SVG, we no longer need to redraw icons for different sizes. Instead, the icons should be designed in such a way that they can be scaled to achieve good results at various sizes.</p>
+            <p class="fp-6">For Yunify Glyph, although we specified a size of 24px (which we consider to be the most common icon size in the interface), designers also needed to be mindful of how the icons would appear when scaled up to 32px and 48px.</p>
+        </div>
+        <img class="sizes-image" src="/yunify-glyph/image/sizes.png" alt="Icons with different sizes">
+        <p class="body-text fp-7">Definitely, thanks to the power of vector, I think it’s okay to enlarge these icons even further if they are designed well balanced and proportionally accurate.</p>
+        <div class="process-title-5">
+            <h5 class="subtitle">Shapes</h5>
+            <h4 class="process-title-text">5 kinds, consistently.</h4>
+        </div>
+        <p class="body-text fp-8">Even though it is not necessary to standardize the shape, but to increase the proportion of rationality in the style, we defined 5 shapes for the icons: horizontal rectangles, vertical rectangles, circles, squares and rectangles rotated 30 degrees clockwise. Designers may not have to strictly place graphics within these 5 shapes, but applying one of them helps the overall consistency.</p>
+        <img class="shapes-image" src="/yunify-glyph/image/shapes.png" alt="Icons with different shapes">
     </main>
 </body>
 </html>
