Finished Yunify Glyph first screen

--- a/yunify-glyph/index.html
+++ b/yunify-glyph/index.html
@@ -554,6 +554,27 @@
         </div>
         <p class="body-text fp-8">Even though it is not necessary to standardize the shape, but to increase the proportion of rationality in the style, we defined 5 shapes for the icons: horizontal rectangles, vertical rectangles, circles, squares and rectangles rotated 30 degrees clockwise. Designers may not have to strictly place graphics within these 5 shapes, but applying one of them helps the overall consistency.</p>
         <img class="shapes-image" src="/yunify-glyph/image/shapes.png" alt="Icons with different shapes">
+        <div class="seperator s-4"></div>
+        <h2 class="section-title st-3" id="samples">Samples</h2>
+        <div class="video-container">
+            <div class="position-box">
+                <div class="position-container">
+                    <video class="appcenter-video" src="/yunify-glyph/video/appcenter-video.mp4" poster="/yunify-glyph/image/appcenter-video-poster.png" autoplay loop playsinline></video>
+                </div>
+            </div>
+        </div>
+        <div class="seperator s-5"></div>
+        <h2 class="section-title st-4" id="other-works">Other Works</h2>
+        <p class="body-text fp-9">My work at QingCloud also includes the design of QingStor Portal, Cloud Management Platform, Website and some visual design works for HR.</p>
+        <div class="other-works-container owc-1"></div>
+        <div class="other-works-container owc-2"></div>
+        <div class="other-works-container owc-3"></div>
+        <div class="other-works-container owc-4"></div>
+        <div class="other-works-container owc-5"></div>
+        <div class="other-works-container owc-6"></div>
+        <footer>
+            <p>Crafted by hands in Pittsburgh.<br><b>© 2022 Zhiyang Li</b></p>
+        </footer>
     </main>
 </body>
 </html>
