Adjust icon set grid

--- a/yunify-glyph/index.html
+++ b/yunify-glyph/index.html
@@ -547,7 +547,7 @@
             <p class="fp-6">For Yunify Glyph, although we specified a size of 24px (which we consider to be the most common icon size in the interface), designers also needed to be mindful of how the icons would appear when scaled up to 32px and 48px.</p>
         </div>
         <img class="sizes-image" src="/yunify-glyph/image/sizes.png" alt="Icons with different sizes">
-        <p class="body-text fp-7">Definitely, thanks to the power of vector, I think it’s okay to enlarge these icons even further if they are designed well balanced and proportionally accurate.</p>
+        <p class="body-text fp-7">Due to the nature of vectors, I don’t think it’s a problem to enlarge the icons even further, as long as they are designed well balanced and proportionally accurate.</p>
         <div class="process-title-5">
             <h5 class="subtitle">Shapes</h5>
             <h4 class="process-title-text">5 kinds, consistently.</h4>
