--- a/xxpie/index.html
+++ b/xxpie/index.html
@@ -42,7 +42,183 @@
         <img class="album" src="/xxpie/image/album.png" alt="Interface for managing photos in album">
         <img class="album_mobile" src="/xxpie/image/album_mobile.png" alt="Album interface on mobile device">
         <img class="upload_mobile" src="/xxpie/image/upload_mobile.png" alt="Upload interface on mobile device">
+        <div class="icon-container">
+            <div class="grid-container">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/gallery.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/compass.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/human.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/album.svg" alt="Icon for album">
+                
 
+            </div>
+            
+        </div>
     </main>
 </body>
 </html>
