Finished first screen for XXpie

--- a/xxpie/index.html
+++ b/xxpie/index.html
@@ -208,9 +208,25 @@
                 <img class="icon-image" src="/xxpie/icon/arrow-down.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/arrow-left.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/arrow-right.svg" alt="Icon for album">
-            </div>
-            
+            </div>   
         </div>
+        <div class="seperator s-3"></div>
+        <h2 class="section-title st-2" id="process">Process</h2>
+        <div class="process-title-1">
+            <h5 class="subtitle">System</h5>
+            <h4 class="process-title-text">Dual upgrade of product and brand.</h4>
+        </div>
+        <p class="body-text fp-1">Over the past few years, XXpie has built up a high brand position in professional customers with its unpretentious, warm and reliable image, and its sales and influence have confirmed its brand value. I am commisioned to upgrade the visual quality of brands and optimizing interactions in products through a systematic perspective.</p>
+        <div class="design-system"></div>
+        <div class="process-title-2">
+            <h5 class="subtitle">Details</h5>
+            <h4 class="process-title-text">The only thing has changed is everything.</h4>
+        </div>
+        <p class="body-text fp-2">Details compose everything. All elements have been thoughtfully rearranged under a unified concept, bringing the renovated interface to a higher level of usability and visual quality.</p>
+        <div class="details"></div>
+        <footer>
+            <p>Crafted by hands in Pittsburgh.<br><b>© 2022 Zhiyang Li</b></p>
+        </footer>
     </main>
 </body>
 </html>
