Update shadow in Yunify Glyph

--- a/xxpie/index.html
+++ b/xxpie/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/image/favicon.png">
     <link rel="apple-touch-icon" href="/image/apple-touch-icon.png">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#28292a">
     <script src="/product-tour-and-smartx-community/script/lazysizes.min.js"></script>
 </head>
 <body>
