Update saturation and vibrance icons

--- a/xxpie/index.html
+++ b/xxpie/index.html
@@ -78,13 +78,13 @@
                 <img class="icon-image" src="/xxpie/icon/close-mark.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/exposure.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/contrast.svg" alt="Icon for album">
-                <img class="icon-image" src="/xxpie/icon/saturation.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/saturation.png" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/temperature.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/tint.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/shadow.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/highlight.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/gamma.svg" alt="Icon for album">
-                <img class="icon-image" src="/xxpie/icon/vibrance.svg" alt="Icon for album">
+                <img class="icon-image" src="/xxpie/icon/vibrance.png" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/emoji.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/trash.svg" alt="Icon for album">
                 <img class="icon-image" src="/xxpie/icon/grip-dots.svg" alt="Icon for album">
