Add google analytics code

--- a/yunify-glyph/index.html
+++ b/yunify-glyph/index.html
@@ -9,7 +9,14 @@
     <link rel="icon" href="/image/favicon.png">
     <link rel="apple-touch-icon" href="/image/apple-touch-icon.png">
     <meta name="theme-color" content="#6f7d8a">
-    <script src="/product-tour-and-smartx-community/script/lazysizes.min.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-981X3D3W0C"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-981X3D3W0C');
+    </script>
 </head>
 <body>
     <header>
