--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="icon" href="image/favicon.png">
     <link rel="apple-touch-icon" href="image/apple-touch-icon.png">
     <meta name="theme-color" content="#ffffff">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-981X3D3W0C"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-981X3D3W0C');
+    </script>
 </head>
 <body>
     <main>
