--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -10,6 +10,14 @@
     <link rel="apple-touch-icon" href="/image/apple-touch-icon.png">
     <meta name="theme-color" content="#284460">
     <script src="/product-tour-and-smartx-community/script/lazysizes.min.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-981X3D3W0C"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-981X3D3W0C');
+    </script>
 </head>
 <body>
     <header>
