Update header image of product tour

--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -29,7 +29,7 @@
         </a>
     </header>
     <main>
-        <h1><b class="bold-title">4Product Tour & SmartX Community</b> — Interactive demo of SMTX OS and CloudTower with a brand new community for developers.</h1>
+        <h1><b class="bold-title">Product Tour & SmartX Community</b> — Interactive demo of SMTX OS and CloudTower with a brand new community for developers.</h1>
         <div class="seperator s-1"></div>
         <ul class="work-info info-name">
             <li class="info-name-item">Company</li>
