Modify Yunify Glyph description

--- a/yunify-glyph/index.html
+++ b/yunify-glyph/index.html
@@ -42,7 +42,7 @@
         </ul>
         <article class="work-description">
             <p class="body-text work-description-paragraph">QingCloud is committed to the creation of cloud-native solutions with pioneering technology, based on its self-developed core code. In terms of brand attributes, QingCloud hopes to establish a free, open and neutral concept of technology. So we attempted to design in a logical and rational way, avoiding excessive decoration and similarity to any other brands.</p>
-            <p class="body-text work-description-paragraph">In 2018 the design team started working on a design system to be used across all of the company’s products. At that time we needed a set of icons that would fit the new website’s visual style defined by Dine, while still meeting the complex and varied needs of the interface design. Eventually we kept the clean, crisp aesthetic from the previous design from agency, by means of using two shades of color and basic geometric shapes to illustrate the icon. </p>
+            <p class="body-text work-description-paragraph">In 2018 the design team started working on a design system to be used across all of the company’s products. At that time we needed a set of icons that would fit the new website’s visual style defined by agency, while still meeting the complex and varied needs of the interface design. Eventually we kept the clean, crisp aesthetic from the previous design from agency, by means of using two shades of color and basic geometric shapes to illustrate the icon. </p>
         </article>
         <ul class="quick-link">
             <li class="quick-link-item"><a class="link" href="#results">Results</a></li>
