Add period to footer in profile

--- a/profile/index.html
+++ b/profile/index.html
@@ -31,7 +31,7 @@
                 </svg>
                 <span class="button-text">Get Resume (PDF)</span>
             </button>
-            <footer>Crafted by hands in Pittsburgh<br><b>© 2022 Zhiyang Li</b></footer>
+            <footer>Crafted by hands in Pittsburgh.<br><b>© 2022 Zhiyang Li</b></footer>
         </aside>
         <article>
             <section>
