--- a/profile/index.html
+++ b/profile/index.html
@@ -40,7 +40,7 @@
                     <h3 class="experience-title">SmartX, Product Designer</h3>
                     <p class="time">2020 Aug –⁠ 2021 Aug · 1 yr</p>
                     <ul class="body-text">
-                        <li>Designed Online Experience for SMTX OS and CloudTower from concept stage to implementation.</li>
+                        <li>Designed Product Tour for SMTX OS and CloudTower from concept stage to implementation.</li>
                         <li>Designed label feature for CloudTower, the new shiny management tool for clusters distributed in multiple data centers.</li>
                         <li>Being the major designer for website, I worked with marketing colleagues and designed the pages for CloudTower, community, solutions and customer stories.</li>
                         <li>Built a design system for technical architecture diagrams used in marketing contents.</li>
