Modify description of XXpie

--- a/xxpie/index.html
+++ b/xxpie/index.html
@@ -41,7 +41,7 @@
             <li class="info-content-item">Product Designer</li>
         </ul>
         <article class="work-description">
-            <p class="body-text work-description-paragraph">XXpie, a start up company based in Changsha and a leading brand in the Chinese photography industry with professional customers all over the country, is seeking to redesign their mobile and web app in 2020. In helping XXpie redefine their design language, I tried to exact symbolic elements from existing characteristic of the product and recombine them in a modern way.</p>
+            <p class="body-text work-description-paragraph">XXpie, a start up company based in Changsha and a leading brand in the Chinese photography industry with professional customers all over the country, is seeking to redesign their mobile and web app in 2020. In helping XXpie redefine their design language, I tried to extract symbolic elements from existing characteristic of the product and recombine them in a modern way.</p>
             <p class="body-text work-description-paragraph">Firstly, I have redesigned their web app for a new layout while not affect the user’s recognition as much as possible, and the new layout is more proportional and clear, with more perfect details; secondly, I have re-designed the mobile app, with uniform tone and precise detail in content; at the same time, I have also developed a set of icons that is more suitable for the products, which not only inherits the design of XXpie’s classic line style, but also presents the balance of warmth and expertise in the brand at the same time.</p>
         </article>
         <div class="seperator s-2"></div>
