--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -49,7 +49,7 @@
             <li class="quick-link-item"><a class="link" href="#results">Results</a></li>
             <li class="quick-link-item"><a class="link" href="#process">Process</a></li>
             <li class="quick-link-item"><a class="link" href="#community">Community</a></li>
-            <li class="quick-link-item"><a class="link" href="#other-works">Others Works</a></li>
+            <li class="quick-link-item"><a class="link" href="#other-works">Other Works</a></li>
         </ul>
         <div class="seperator s-2"></div>
         <h2 class="section-title st-1" id="results">Results</h2>
