Add tool in profile

--- a/profile/index.html
+++ b/profile/index.html
@@ -22,7 +22,7 @@
             </section>
             <section class="tool-section">
                 <h2 class="side-title">Tool</h2>
-                <p class="body-text language-text">Figma<br>Pixelmator Pro<br>DaVinci Resolve<br>Blender<br>HTML/CSS/JavaScript</p>
+                <p class="body-text language-text">Figma<br>Pixelmator Pro<br>DaVinci Resolve<br>Blender<br>Visual Studio Code<br>HTML/CSS/JavaScript</p>
             </section>
             <button onclick="location.href='/pdf/resume.pdf'">
                 <svg class="button-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
